# KMCLib

./: README.md  README.txt  RELEASE_NOTES.md  WARNING  index.html  params.json
c++/: CMakeLists.txt  INSTALL.md  Makefile
c++/custom/: CMakeLists.txt  bucketstestcalculator.cpp  bucketstestcalculator.h  isingtestcalculator.cpp  isingtestcalculator.h
c++/src/: CMakeLists.txt  blocker.cpp  blocker.h  configuration.cpp  configuration.h  coordinate.cpp  coordinate.h  customrateprocess.cpp  customrateprocess.h  hash.cpp  hash.h  interactions.cpp  interactions.h  latticemap.cpp  latticemap.h  latticemodel.cpp  latticemodel.h  matcher.cpp  matcher.h  matchlist.cpp  matchlist.h  matchlistentry.cpp  matchlistentry.h  mpicommons.cpp  mpicommons.h  mpih.h  mpiroutines.cpp  mpiroutines.h  ontheflymsd.cpp  ontheflymsd.h  process.cpp  process.h  random.cpp  random.h  ratecalculator.cpp  ratecalculator.h  ratetable.cpp  ratetable.h  simulationtimer.cpp  simulationtimer.h  (+2 more)
c++/unittest/: CMakeLists.txt  testRunner.cpp  testRunner.h  test_blocker.cpp  test_blocker.h  test_configuration.cpp  test_configuration.h  test_coordinate.cpp  test_coordinate.h  test_customrateprocess.cpp  test_customrateprocess.h  test_hash.cpp  test_hash.h  test_interactions.cpp  test_interactions.h  test_latticemap.cpp  test_latticemap.h  test_latticemodel.cpp  test_latticemodel.h  test_matcher.cpp  test_matcher.h  test_matchlist.cpp  test_matchlist.h  test_matchlistentry.cpp  test_matchlistentry.h  test_mpicommons.cpp  test_mpicommons.h  test_mpiroutines.cpp  test_mpiroutines.h  test_ontheflymsd.cpp  test_ontheflymsd.h  test_process.cpp  test_process.h  test_random.cpp  test_random.h  test_ratecalculator.cpp  test_ratecalculator.h  test_ratetable.cpp  test_ratetable.h  test_simulationtimer.cpp  (+3 more)
c++/wrap/: CMakeLists.txt  backend.i
manual/: about.html  algorithm.html  analysis.html  api.html  genindex.html  index.html  install.html  intro.html  non_api.html  objects.inv  plugins.html  references.html  search.html  searchindex.js
manual-v1.0/: genindex.html  intro.html  objects.inv  usage.html
manual-v1.0/_sources/: about.txt  analysis.txt  install.txt
manual-v1.1/: about.html  analysis.html  genindex.html  index.html  install.html  plugins.html  references.html  search.html  usage.html
manual-v1.1/_sources/: about.txt  intro.txt  usage.txt
manual/_sources/: install.txt  non_api.txt  references.txt
python/: Makefile
python/doc/: Makefile
python/doc/source/: about.rst  algorithm.rst  analysis.rst  api.rst  conf.py  index.rst  install.rst  intro.rst  non_api.rst  plugins.rst  references.rst  usage.rst
python/doc/source/_static/: default.css
python/doc/source/_templates/: layout.html
python/functest/Buckets/: BucketsTest.py
python/functest/Diffusion1D/: Diffusion1DTest.py
python/functest/Diffusion3D/: Diffusion3DTest.py  config.py  processes.py
python/functest/IsingSpin/: IsingSpinTest.py  config.py  custom_processes.py  fixed_processes.py
python/functest/OnTheFlyMSD/: OnTheFlyMSDTest.py
python/functest/OnTheFlyRateCalculator/: OnTheFlyRateCalculatorTest.py
python/functest/TimeStepDistribution/: TimeStepDistributionTest.py
python/src/KMCLib/: KMCConfiguration.py  KMCControlParameters.py  KMCInteractions.py  KMCLattice.py  KMCLatticeModel.py  KMCLocalConfiguration.py  KMCProcess.py  KMCRateCalculator.py  KMCRateCalculatorPlugin.py  KMCUnitCell.py  __init__.py
python/src/KMCLib/Analysis/: Composition.py  OnTheFlyMSD.py  ProcessStatistics.py  TimeStepDistribution.py
python/src/KMCLib/CoreComponents/: KMCBaseProcess.py  KMCBucketProcess.py  KMCConfiguration.py  KMCControlParameters.py  KMCInteractions.py  KMCLattice.py  KMCLatticeModel.py  KMCLocalConfiguration.py  KMCProcess.py  KMCUnitCell.py
python/src/KMCLib/Exceptions/: Error.py
python/src/KMCLib/Lattice/: Lattice.py  UnitCell.py
python/src/KMCLib/OnTheFlyMSD/: FastOnTheFlyMSD.py  OnTheFlyMSD.py
python/src/KMCLib/PluginInterfaces/: KMCAnalysisPlugin.py  KMCBreakerPlugin.py  KMCRateCalculatorPlugin.py
python/src/KMCLib/TimeStepDistribution/: TimeStepDistribution.py
python/src/KMCLib/Utilities/: CheckUtilities.py  ConversionUtilities.py  CoordinateUtilities.py  PrintUtilities.py  SaveAndReadUtilities.py
python/src/KMCLib/Utilities/Trajectory/: LatticeTrajectory.py  Trajectory.py  XYZTrajectory.py
python/unittest/: utest.py
python/unittest/KMCLibTest/: KMCAnalysisPluginTest.py  KMCConfigurationTest.py  KMCControlParametersTest.py  KMCInteractionsTest.py  KMCLatticeModelTest.py  KMCLatticeTest.py  KMCLibTests.py  KMCLocalConfigurationTest.py  KMCProcessTest.py  KMCRateCalculatorPluginTest.py  KMCUnitCellTest.py
python/unittest/KMCLibTest/Analysis/: AnalysisTests.py  CompositionTest.py  OnTheFlyMSDTest.py  ProcessStatisticsTest.py  TimeStepDistributionTest.py
python/unittest/KMCLibTest/Backend/: BackendTests.py  WrappingTest.py
python/unittest/KMCLibTest/CoreComponents/: CoreComponentsTests.py  KMCConfigurationTest.py  KMCControlParametersTest.py  KMCInteractionsTest.py  KMCLatticeModelTest.py  KMCLatticeTest.py  KMCLocalConfigurationTest.py  KMCProcessTest.py  KMCUnitCellTest.py
python/unittest/KMCLibTest/Exceptions/: ErrorTest.py  ExceptionsTests.py
python/unittest/KMCLibTest/Lattice/: LatticeTest.py  LatticeTests.py  UnitCellTest.py
python/unittest/KMCLibTest/OnTheFlyMSD/: OnTheFlyMSDTest.py  OnTheFlyMSDTests.py
python/unittest/KMCLibTest/PluginInterfaces/: KMCAnalysisPluginTest.py  KMCBreakerPluginTest.py  KMCRateCalculatorPluginTest.py  PluginInterfacesTests.py
python/unittest/KMCLibTest/TestUtilities/Scratch/: README
python/unittest/KMCLibTest/TestUtilities/Scripts/: kmc_configuration_script.py  kmc_lattice_model_script.py
python/unittest/KMCLibTest/TimeStepDistribution/: TimeStepDistributionTest.py  TimeStepDistributionTests.py
python/unittest/KMCLibTest/Utilities/: CheckUtilitiesTest.py  ConversionUtilitiesTest.py  CoordinateUtilitiesTest.py  PrintUtilitiesTest.py  SaveAndReadUtilitiesTest.py  UtilitiesTests.py
python/unittest/KMCLibTest/Utilities/Trajectory/: LatticeTrajectoryTest.py  (+3 more)
(+1 files in other folders)
